@@ -28,7 +28,7 @@ import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Extension;
 import hudson.model.Descriptor;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 import jenkins.model.Jenkins;
 import org.acegisecurity.acls.sid.GrantedAuthoritySid;
 import org.jenkinsci.Symbol;
@@ -55,7 +55,7 @@ public final class LegacyAuthorizationStrategy extends AuthorizationStrategy {
 
     @Override
     public Collection<String> getGroups() {
-        return Collections.singleton("admin");
+        return Set.of("admin");
     }
 
     @Extension @Symbol("legacy")
